--- a/CreateDrawing.csproj
+++ b/CreateDrawing.csproj
@@ -63,7 +63,7 @@
     <SignManifests>true</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>3700406-drawing-geometry-measure-measuring-rulers-set-square_108770.ico</ApplicationIcon>
+    <ApplicationIcon>drawing.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
     <TargetZone>LocalIntranet</TargetZone>
@@ -95,8 +95,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Drafting\Assembly.cs" />
+    <Compile Include="Drafting\Part.cs" />
+    <Compile Include="Drawing.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Drafting\SheetMetal.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -116,9 +120,9 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="3700406-drawing-geometry-measure-measuring-rulers-set-square_108770.ico" />
     <Content Include="drawing.ico" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\SolidEdge.Community.AddIn.219.0.0\build\net40\SolidEdge.Community.AddIn.targets" Condition="Exists('packages\SolidEdge.Community.AddIn.219.0.0\build\net40\SolidEdge.Community.AddIn.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
